Fixed content-visibility issues

--- a/src/reset.css
+++ b/src/reset.css
@@ -5,9 +5,12 @@
   box-sizing: border-box;
 }
 
-/* Adds content visibility each element for ultimate loading speed */
+/* Adds content visibility: auto to optimize rendering */
 @supports (content-visibility: auto) {
-  * {
+  img,
+  picture,
+  video,
+  iframe {
     content-visibility: auto;
   }
 }
